update advanced day 1 course structure

--- a/AdvancedR_Course_Day1/Advanced-Day1.html
+++ b/AdvancedR_Course_Day1/Advanced-Day1.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Bush Heritage">
+<meta name="dcterms.date" content="2024-02-13">
 
 <title>Modelling in R</title>
 <style>
@@ -3059,7 +3060,7 @@ vertical-align: -.125em;
     <div>
     <div class="quarto-title-meta-heading">Date</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">Invalid Date</p>
+      <p class="date">February 13, 2024</p>
     </div>
   </div>
   
@@ -3073,6 +3074,21 @@ vertical-align: -.125em;
 
 <section id="welcome" class="level1">
 <h1>Welcome</h1>
+<p>Day 1 (Morning): Simple linear models</p>
+<ul>
+<li>Frequentist lm</li>
+<li>Frequentist glm</li>
+<li>OLS to max likelihoood</li>
+<li>Model checking - residuals</li>
+</ul>
+<p>Day 1 (Afternoon): Complex multivariate models</p>
+<ul>
+<li><p>Bayesian glm (univariate)</p></li>
+<li><p>Bayesian parameter estimation</p></li>
+<li><p>max likelihood to MCMC sampling</p></li>
+<li><p>Why Bayesian? complex models (e.g., spatial random effects), low sample size and prior information</p></li>
+<li><p>multivariate GLM (or wait till day 2 and make it a spatial example?)</p></li>
+</ul>
 </section>
 
 </main>
